# serializer version: 1
# name: TestHeadMethod.test_head_inplace_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  
  '''
# ---
# name: TestHeadMethod.test_head_inplace_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  
  '''
# ---
# name: TestHeadMethod.test_head_inplace_specific_sequence
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  
  '''
# ---
# name: TestHeadMethod.test_head_negative_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  
  '''
# ---
# name: TestHeadMethod.test_head_negative_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  
  '''
# ---
# name: TestHeadMethod.test_head_positive_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  
  '''
# ---
# name: TestHeadMethod.test_head_positive_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  
  '''
# ---
# name: TestHeadMethod.test_head_positive_specific_sequence
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  
  '''
# ---
# name: TestSliceMethod.test_slice_inplace_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  
  '''
# ---
# name: TestSliceMethod.test_slice_inplace_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  
  '''
# ---
# name: TestSliceMethod.test_slice_only_end_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  
  '''
# ---
# name: TestSliceMethod.test_slice_only_end_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  
  '''
# ---
# name: TestSliceMethod.test_slice_only_start_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  
  '''
# ---
# name: TestSliceMethod.test_slice_only_start_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  
  '''
# ---
# name: TestSliceMethod.test_slice_start_end_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  
  '''
# ---
# name: TestSliceMethod.test_slice_start_end_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  
  '''
# ---
# name: TestSliceMethod.test_slice_start_end_specific_sequence
  '''
  patient_id,date,event_type,provider
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  
  '''
# ---
# name: TestSliceMethod.test_slice_start_end_with_step_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-02-28,EXAM,
  1,2023-06-10,VACCINATION,
  
  '''
# ---
# name: TestSliceMethod.test_slice_start_end_with_step_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  
  '''
# ---
# name: TestSliceMethod.test_slice_with_step_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-02-28,EXAM,
  1,2023-06-10,VACCINATION,
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-26,EMERGENCY,
  
  '''
# ---
# name: TestSliceMethod.test_slice_with_step_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  
  '''
# ---
# name: TestSliceMethod.test_slice_with_step_specific_sequence
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-02-28,EXAM,
  1,2023-06-10,VACCINATION,
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-26,EMERGENCY,
  
  '''
# ---
# name: TestTailMethod.test_tail_inplace_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  
  '''
# ---
# name: TestTailMethod.test_tail_inplace_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  
  '''
# ---
# name: TestTailMethod.test_tail_negative_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  
  '''
# ---
# name: TestTailMethod.test_tail_negative_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  
  '''
# ---
# name: TestTailMethod.test_tail_positive_all_sequences
  '''
  patient_id,date,event_type,provider
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  
  '''
# ---
# name: TestTailMethod.test_tail_positive_all_sequences.1
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  
  '''
# ---
# name: TestTailMethod.test_tail_positive_specific_sequence
  '''
  patient_id,date,event_type,provider
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  
  '''
# ---
